tests/compile_fail/timeout/result_error_not_convertible_sync.stderr
error[E0277]: the trait bound `NotConvertible: From<TimeoutError>` is not satisfied
  --> tests/compile_fail/timeout/result_error_not_convertible_sync.rs:6:35
   |
 6 | fn timeout_result() -> Result<(), NotConvertible> {
   |                                   ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `From<TimeoutError>` is not implemented for `NotConvertible`
  --> tests/compile_fail/timeout/result_error_not_convertible_sync.rs:12:1
   |
12 | struct NotConvertible;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: see issue #48214

error[E0277]: the trait bound `NotConvertible: From<TimeoutError>` is not satisfied
  --> tests/compile_fail/timeout/result_error_not_convertible_sync.rs:15:13
   |
15 |     let _ = timeout_result();
   |             ^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `From<TimeoutError>` is not implemented for `NotConvertible`
  --> tests/compile_fail/timeout/result_error_not_convertible_sync.rs:12:1
   |
12 | struct NotConvertible;
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `timeout_result`
  --> tests/compile_fail/timeout/result_error_not_convertible_sync.rs:6:35
   |
 6 | fn timeout_result() -> Result<(), NotConvertible> {
   |                                   ^^^^^^^^^^^^^^ required by this bound in `timeout_result`
